[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/logo_1.png" type="Texture" id=1]
[ext_resource path="res://theme/theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/main_menu.gd" type="Script" id=3]
[ext_resource path="res://sprites/bowl.jpg" type="Texture" id=4]
[ext_resource path="res://theme/comic.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 72
outline_size = 8
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=2]
resource_name = "default"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:rect_rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -20, -0.25, 0, 0.25, 0, 20, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.7, 1 )
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.10352e-05
margin_top = -360.268
margin_right = 640.0
margin_bottom = -0.268494
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1260.0
margin_bottom = 700.0
custom_constants/separation = 20
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 1240.0
margin_bottom = 344.0
custom_constants/separation = 40
alignment = 1

[node name="Logo" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 163.0
margin_right = 483.0
margin_bottom = 320.0
rect_min_size = Vector2( 320, 320 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 523.0
margin_top = 109.0
margin_right = 1077.0
margin_bottom = 210.0
rect_pivot_offset = Vector2( 277, 50 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.133333, 0.694118, 0.298039, 1 )
custom_colors/font_outline_modulate = Color( 0.709804, 0.901961, 0.113725, 1 )
text = "VEGGIE BRAWL"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer/VBoxContainer/HBoxContainer/Label"]
anims/default = SubResource( 2 )

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 585.0
margin_top = 364.0
margin_right = 654.0
margin_bottom = 422.0
size_flags_horizontal = 4
text = "Play"

[node name="Instructions" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 537.0
margin_top = 442.0
margin_right = 702.0
margin_bottom = 500.0
size_flags_horizontal = 4
text = "Instructions"

[node name="Credits" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 566.0
margin_top = 520.0
margin_right = 673.0
margin_bottom = 578.0
size_flags_horizontal = 4
text = "Credits"

[node name="MoreInfo" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 549.0
margin_top = 598.0
margin_right = 690.0
margin_bottom = 656.0
size_flags_horizontal = 4
text = "More Info"

[node name="IPop" type="PopupPanel" parent="."]
margin_right = 314.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="IPop"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0
text = "Tap the WASD or arrow keys to move!
Don't get scooped up by the spoon and eaten!
Last veggie standing wins!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CPop" type="PopupPanel" parent="."]
margin_right = 400.0
margin_bottom = 170.0

[node name="RichTextLabel" type="RichTextLabel" parent="CPop"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0
bbcode_enabled = true
bbcode_text = "[url=https://godotengine.org/license]Made with Godot[/url]
Programming: [url=https://emily2.itch.io/]Exuin[/url]
Art: [url=https://twitter.com/AlboreArt]Albore[/url] and [url=https://itch.io/profile/noobatcoding]Mr craft(ron)[/url]
Music: [url=https://itch.io/profile/tyekillough]Tye Killough[/url]"
text = "Made with Godot
Programming: Exuin
Art: Albore and Mr craft(ron)
Music: Tye Killough"

[node name="MPop" type="PopupPanel" parent="."]
margin_right = 518.0
margin_bottom = 132.0

[node name="Label" type="Label" parent="MPop"]
margin_left = 12.0
margin_top = 12.0
margin_right = 506.0
margin_bottom = 120.0
text = "Challenges used:
Only use the default MS Paint color palette.
Use only comic sans for any in-game font."

[connection signal="pressed" from="MarginContainer/VBoxContainer/Instructions" to="." method="_on_instructions_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MoreInfo" to="." method="_on_more_info_pressed"]
[connection signal="meta_clicked" from="CPop/RichTextLabel" to="." method="_on_meta_clicked"]
